--- a/src/components/GalleryItem/GalleryItem.css
+++ b/src/components/GalleryItem/GalleryItem.css
@@ -1,8 +1,31 @@
 img {
   width: 100%;
+  height: 100%;
+}
+
+h3 {
+  margin: 5px;
 }
 
 .imgBlock {
+  position: relative;
   margin: 5px;
-  width: 400px;
+  max-width: 400px;
+  height: auto;
+}
+
+.desc {
+  position: absolute;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+  background-color: #ffffffb2;
+  padding: 10px 50px;
+}
+
+.liked {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  z-index: 1;
 }
